integration/fixtures/k8s/03-ingressroute.yml
apiVersion: hanzo.ai/v1alpha1
kind: IngressRoute
metadata:
  name: test.route
  namespace: default
  labels:
    app: ingress

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`foo.com`) && PathPrefix(`/bar`)
    kind: Rule
    priority: 12
    services:
    - name: whoami
      port: 80

  tls:
    options:
      name: mytlsoption
    store:
      name: mytlsstore
