integration/fixtures/k8s/03-tlsoption.yml
apiVersion: hanzo.ai/v1alpha1
kind: TLSOption
metadata:
  name: mytlsoption
  namespace: default
  labels:
    app: ingress

spec:
  minVersion: VersionTLS12
  sniStrict: true
  cipherSuites:
    - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
    - TLS_RSA_WITH_AES_256_GCM_SHA384
