integration/fixtures/k8s/03-tlsstore.yml
apiVersion: hanzo.ai/v1alpha1
kind: TLSStore
metadata:
  name: mytlsstore
  namespace: default
  labels:
    app: ingress

spec:
  defaultCertificate:
    secretName: tls-cert
