integration/fixtures/k8s/08-ingressclass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-keep
spec:
  controller: hanzo.ai/ingress-controller

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "whoami-keep-route"
spec:
  ingressClassName: "ingress-keep"
  rules:
  - host: "whoami.test.keep"
    http:
      paths:
      - path: "/keep"
        backend:
          service:
            name: whoami
            port:
              number: 80
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-drop
spec:
  controller: hanzo.ai/ingress-controller

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "whoami-drop-route"
spec:
  ingressClassName: "ingress-drop"
  rules:
  - host: "whoami.test.drop"
    http:
      paths:
      - path: "/drop"
        backend:
          service:
            name: whoami
            port:
              number: 80
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-not-controller
spec:
  controller: not.tr43phic.io/ingress-controller

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "whoami-drop-ingress"
spec:
  ingressClassName: "ingress-not-controller"
  rules:
  - host: "whoami.test.not.ingress"
    http:
      paths:
      - path: "/ingress"
        backend:
          service:
            name: whoami
            port:
              number: 80
        pathType: Prefix
